testsuite/tests/ghci/should_run/GhciMainIs.hs
module GhciMainIs where

otherMain :: IO ()
otherMain = putStrLn "other main"
