testsuite/tests/ghci/should_fail/T11596.hs
import T11596S

main :: IO ()
main = test
